@@ -28,7 +28,7 @@ Alien::Editline                                = 0.04
 Alien::FFI                                     = 0.12
 Alien::flex                                    = 0.04
 Alien::gmake                                   = 0.11
-Alien::Hunspell                                = 0.02
+Alien::Hunspell                                = 0.03
 Alien::Libarchive                              = 0.26
 Alien::Libarchive::Installer                   = 0.12
 Alien::Libbz2                                  = 0.02
@@ -104,13 +104,14 @@ Shell::Config::Generate                        = 0.24
 Shell::Guess                                   = 0.06
 String::Template                               = 0.19
 Term::EditLine                                 = 0.09
-Test::Alien                                    = 0.02
+Test::Alien                                    = 0.04
 Test::CChecker                                 = 0.07
 Test::Clustericious::Cluster                   = 0.28
 Test::Exec                                     = 0.02
 Test::Fixme                                    = 0.15
 Test::Script                                   = 1.10
 Test::Version                                  = 2.03
+Text::Hunspell::FFI                            = 0.01
 URI::ws                                        = 0.03
 UUID::FFI                                      = 0.05
 WebService::LiveJournal                        = 0.07
@@ -137,15 +138,15 @@ File::IgnoreReadonly                           = 0
 File::Listing                                  = 0
 File::Touch                                    = 0
 JSON                                           = 0
-JSON::XS                                       = 0
+Cpanel::JSON::XS                               = 0
 local::lib                                     = 0
 Log::Log4perl                                  = 0
 ; Module::CoreList is in core, but in separate rpms
 Module::CoreList                               = 0
 Module::Which                                  = 0
-Mojolicious                                    = 5.80
+Mojolicious                                    = 6.02
 Monkey::Patch                                  = 0
-Moose                                          = 0
+Moose                                          = 2.1604
 Net::DNS                                       = 0
 Pod::Abstract                                  = 0
 
